--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "rpc-contract",
   "version": "0.1.0",
   "description": "Contract for Rock-Paper-Crypto system.",
-  "dependencies": {
-    "hardhat": "^2.4.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.0.0",
-    "ethers": "^5.0.0"
+    "ethers": "^5.0.0",
+    "hardhat": "^2.4.1",
+    "solidity-coverage": "^0.7.16"
   }
 }
